# wanted-senior-developer-test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: asgi.py
app/common/: schemas.py  utils.py
app/core/: application.py
app/core/connection/: postgres.py
app/core/logging/: config.py
app/core/settings/: __init__.py  base.py  development.py  local.py  production.py  test.py
app/model/: base.py  company.py
app/model/repository/: base.py  company.py  tag.py
app/route/: __init__.py  company.py  home.py  search.py
app/service/: base.py  company.py  search.py  tag.py
tests/: conftest.py  test_senior_app.py
