[tool.poetry]
name = "wanted-senior-developer-test"
version = "0.1.0"
description = ""
authors = ["박민재 <miintto.log@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.8"
httpx = "^0.28.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
